--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.4",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.6",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -29,10 +32,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
